...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/btnSignOut"
                android:layout_toRightOf="@+id/btnSignOut"
                android:background="@android:color/holo_blue_dark"
                android:text="  map"
                android:textAlignment="textStart"
                tools:ignore="HardcodedText" />

...
